--- a/PayLessTax/Base.lproj/Main.storyboard
+++ b/PayLessTax/Base.lproj/Main.storyboard
@@ -492,6 +492,9 @@
                                 <rect key="frame" x="223" y="430" width="155" height="28"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <state key="normal" title="I already have an account"/>
+                                <connections>
+                                    <segue destination="tTY-qY-hrJ" kind="unwind" unwindAction="backToLogin:" id="X5U-ef-gOK"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uam-JN-sMb">
                                 <rect key="frame" x="258" y="390" width="84" height="30"/>
@@ -516,6 +519,7 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PyX-nV-ddJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="tTY-qY-hrJ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1035" y="1025"/>
         </scene>
